--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,39 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {
-  }
+    "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+    "version": 1,
+    "newProjectRoot": "projects",
+    "projects": {
+        "ngx-fire-firestore": {
+            "projectType": "library",
+            "root": "projects/ngx-fire-firestore",
+            "sourceRoot": "projects/ngx-fire-firestore/src",
+            "prefix": "lib",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "options": {
+                        "project": "projects/ngx-fire-firestore/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "projects/ngx-fire-firestore/tsconfig.lib.prod.json"
+                        },
+                        "development": {
+                            "tsConfig": "projects/ngx-fire-firestore/tsconfig.lib.json"
+                        }
+                    },
+                    "defaultConfiguration": "production"
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "projects/ngx-fire-firestore/src/test.ts",
+                        "tsConfig": "projects/ngx-fire-firestore/tsconfig.spec.json",
+                        "karmaConfig": "projects/ngx-fire-firestore/karma.conf.js"
+                    }
+                }
+            }
+        }
+    },
+    "defaultProject": "ngx-fire-firestore"
 }
