--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,12 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
+    "paths": {
+      "ngx-fire-firestore": [
+        "dist/ngx-fire-firestore/ngx-fire-firestore",
+        "dist/ngx-fire-firestore"
+      ]
+    },
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
